--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
-.container {
-  /*background-color: #2a272e;*/
+html {
+    background: url('/images/bg.jpg') no-repeat center center fixed;
+    background-size: cover;
 }
