--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
 html {
-    background: url('~/images/bg.jpg') no-repeat center center fixed;
+    background: url('~assets/images/bg.jpg') no-repeat center center fixed;
     background-size: cover;
 }
